<resources>
    <string name="app_name">Ass1</string>
    <string name="turkish_touch">✨Turkish Touch✨</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="student_id">Student ID</string>
    <string name="student_password">Student Password</string>
    <string name="remember_password">Remember password</string>
    <string name="start_learn">Start learn</string>
    <string name="student_name">Student Name</string>
    <string name="section">Section</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="alphabets">Alphabets</string>
    <string name="numbers">Numbers</string>
    <string name="colors">Colors</string>
    <string name="family">Family</string>
    <string name="quiz">Quiz</string>
    <string name="a_at_yaz_salata">A : At, Yaz, Salata \n يلفظ كحرف الألف</string>
    <string name="b_bir_sabah">B : Bir, Sabah \n يلفظ كحرف الباء</string>
    <string name="c_cevap_cami">C : Cevap, Cami \n يلفظ كحرف الجيم</string>
    <string name="al_mak_i_ek">Ç : Çalışmak, Çiçek \n يلفظ تش</string>
    <string name="d_d_rt_duman">D : Dört, Duman \n يلفظ كحرف الدال</string>
    <string name="e_elma_ev">E : Elma, Ev \n يلفظ مثل الكسرة الخفيفة الممدودة</string>
    <string name="f_f_r_n_fener">F : Fırın, Fener \n يلفظ كحرف الفاء</string>
    <string name="g_g_n_g_zl_k_n">G : Gün, Gözlük \n يلفظ كحرف ال چ</string>
    <string name="quiz_time">✨ Quiz Time ✨</string>
    <string name="q_1_10">Q: 1/10</string>
    <string name="rate_0_10">Rate: 0/10</string>
    <string name="s_f_r">Sıfır</string>
    <string name="zero">Zero</string>
    <string name="one">One</string>
    <string name="four">Four</string>
    <string name="ten">Ten</string>
    <string name="beyaz_nwhite_n">Beyaz\nWhite\nأبيض</string>
    <string name="siyah_nblack_n">Siyah\nBlack\nأسود</string>
    <string name="k_rm_z_nred_n">Kırmızı\nRed\nأحمر</string>
    <string name="mavi_nblue_n">Mavi\nBlue\nأزرق</string>
    <string name="ye_il_ngreen_n">Yeşil\nGreen\nأخضر</string>
    <string name="sar_nyellow_n">Sarı\nYellow\nأصفر</string>
    <string name="turuncu_norange_n">Turuncu\nOrange\nبرتقالي</string>
    <string name="pembe_npink_n">Pembe\nPink\nوردي</string>
    <string name="mor_npurple_n">Mor\nPurple\nبنفسجي</string>
    <string name="kahverengi_nbrown_n">Kahverengi\nBrown\nبني</string>
    <string name="gri_ngray_n">Gri\nGray\nرمادي</string>
    <string name="turkuaz_nturquoise_n">Turkuaz\nTurquoise\nتركواز</string>
    <string name="alt_n_ngold_n">Altın\nGold\nذهبي</string>
    <string name="g_m_nsilver_n">Gümüş\nSilver\nفضي</string>
    <string name="anne_nmother_n">Anne\nMother\nالأم</string>
    <string name="baba_nfather_n">Baba\nFather\nالأب</string>
    <string name="o_ul_nson_n">Oğul\nSon\nالابن</string>
    <string name="karde_nbrother_n">Kardeş\nBrother\nالاخ</string>
    <string name="k_z_karde_nsister_n">Kız Kardeş\nSister\nالاخت</string>
    <string name="dede_ngrandfather_n">Dede\nGrandfather\nالجد</string>
    <string name="b_y_kanne_ngrandmother_n">Büyükanne\nGrandmother\nالجدة</string>
    <string name="amca_nuncle_n">Amca\nUncle\nالعم</string>
    <string name="hala_naunt_n">Hala\nAunt\nالعمة</string>
    <string name="day_nuncle_n">Dayı\nUncle\nالخال</string>
    <string name="teyze_naunt_n">Teyze\nAunt\nالخالة</string>
    <string name="a_a_ya_n">Ğ : Ağaç, Yağ \n هذا الحرف لا يلفظ ولا يمكن أن يأتي في أول الكلمة</string>
    <string name="h_hay_r_helikopter_n">H : Hayır, Helikopter \nيلفظ مثل حرف الهاء</string>
    <string name="i_yi_kiz">I : Kış, Kırk</string>
    <string name="stanbul_necek">İ : İstanbul, İnecek</string>
    <string name="j_jandarma_judo_n">J : Jandarma, Judo \n يلفظ مثل حرف الجيم</string>
    <string name="k_kalem_kedi_n">K : Kalem, Kedi \n يلفظ مثل حرف الكاف</string>
    <string name="l_lamba_lale_n">L : Lamba, Lale \n يلفظ مثل حرف اللام</string>
    <string name="m_masal_maymun_n">M : Masal, Maymun \n يلفظ مثل حرف الميم</string>
    <string name="n_nar_ney_n">N : Nar, Ney \n يلفظ مثل حرف النون</string>
    <string name="o_otomobil_orman_n">O : Otomobil, Orman \n يلفظ مثل حرف الواو</string>
    <string name="renci_rdek">Ö : Öğrenci, Ördek</string>
    <string name="p_papatya_pide_n">P : Papatya, Pide \n يلفظ مثل حرف الباء المخففة</string>
    <string name="r_radyo_r_zgar_n">R : Radyo, Rüzgar \n يلفظ مثل حرف الراء</string>
</resources>