<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="28dp"
    android:layout_marginTop="16dp"
    tools:context=".SignUpPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turkish_touch"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#821D30"
        android:layout_marginTop="32dp" >
    </TextView>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:hint="@string/student_name" >
    </EditText>

    <EditText
        android:id="@+id/edtID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:hint="@string/student_id">
    </EditText>

    <EditText
        android:id="@+id/edtSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:hint="@string/section" >

    </EditText>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_password"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/edtConPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="30dp"
        android:textSize="25sp"
        android:inputType="textPassword" >
    </EditText>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:backgroundTint="#d9cebb"
        android:textColor="#821D30"
        android:text="@string/start_learn"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:onClick="onClickGoHome"
        android:padding="10dp">
    </Button>
</LinearLayout>
