<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".QuizPage">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_time"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#821D30"
        android:layout_marginTop="30dp"
        >
    </TextView>
  <TextView
      android:id="@+id/question"
      android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q_1_10"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp">
 </TextView>
    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_0_10"
android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="16sp">
    </TextView>
    <TextView
        android:id="@+id/word"
        android:layout_width="200sp"
        android:layout_height="150sp"
        android:text="@string/s_f_r"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:background="#821D30"
        android:textColor="#d9cebb"
        >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20sp"
            android:padding="10dp"
            android:backgroundTint="#d9cebb"
            android:textStyle="bold"
            android:textColor="#821D30"
            >
        </Button>
        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#d9cebb"
            android:textStyle="bold"
            android:textColor="#821D30"
            >
        </Button>
        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#d9cebb"
            android:textStyle="bold"
            android:textColor="#821D30"
            >
        </Button>
        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#d9cebb"
            android:textStyle="bold"
            android:textColor="#821D30"
            >
        </Button>
    </LinearLayout>
    <TextView
        android:id="@+id/txtAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="45dp"
        android:gravity="center"
        >
    </TextView>
</LinearLayout>