<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="✨Colors✨"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#821D30"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beyaz_nwhite_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFFFFF
"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siyah_nblack_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/k_rm_z_nred_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#821D30"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mavi_nblue_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#0000FF"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ye_il_ngreen_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#006400"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sar_nyellow_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#8B8000"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/turuncu_norange_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#FFA500"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pembe_npink_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#AA336A"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mor_npurple_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#A020F0"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kahverengi_nbrown_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#964B00"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gri_ngray_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#808080"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/turkuaz_nturquoise_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#40E0D0"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alt_n_ngold_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#966919"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/g_m_nsilver_n"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#868686"
                android:layout_gravity="center"
                android:background="#d9cebb"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
