<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turkish_touch"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#821D30"
        android:layout_gravity="center"
        android:layout_marginTop="32dp" >
    </TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/intro"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" >
    </ImageView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:backgroundTint="#d9cebb"
        android:textColor="#821D30"
        android:onClick="onClickLogin">

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#d9cebb"
        android:textStyle="bold"
        android:textColor="#821D30"
        android:onClick="onClickSignUp">
    </Button>

</LinearLayout>
