<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:padding="10dp"
    android:id="@+id/main"
    android:layout_gravity="center"
    tools:context=".HomePage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turkish_touch"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#821D30"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:background="#d9cebb"
        android:onClick="onClickLetters"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/letter"
            >
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alphabets"
            android:textSize="30sp"
            android:textColor="#821D30"
            android:textStyle="bold"
            android:layout_marginStart="20dp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:background="#d9cebb"
        android:onClick="onClickNumber"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/num"
            >
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbers"
            android:textSize="30sp"
            android:textColor="#821D30"
            android:textStyle="bold"
            android:layout_marginStart="20dp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:background="#d9cebb"
        android:onClick="onClickColor"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/colors"
            >
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colors"
            android:textSize="30sp"
            android:textColor="#821D30"
            android:textStyle="bold"
            android:layout_marginStart="20dp" >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:background="#d9cebb"
        android:onClick="onClickFamily"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/family"
            >
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/family"
            android:textSize="30sp"
            android:textColor="#821D30"
            android:textStyle="bold"
            android:layout_marginStart="20dp" >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="10dp"
        android:background="#d9cebb"
        android:onClick="onClickQuiz"
        >
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/qiuz">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/quiz"
            android:textColor="#821D30"
            android:textSize="30sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

</LinearLayout>